# smash

./: .gitignore  .travis.yml  BuildHS5e17WithGG5e17.sh  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.nix  README.md  common.c  common.h  context.c  context.h  defs.h  filters.c  filters.h  mem.c  mem.h  paint.c  paint.h  reverse.c  reverse.h  segment.c  segment.h  smash.c
imgs/: logo.eps
scripts/: BuildHS5e17WithGG5e17.sh
src/: CMakeLists.txt  Makefile.nix  common.c  common.h  context.c  context.h  filters.c  smash.c
